Problem class active : fixed

--- a/jekyll/_data/navigation.yml
+++ b/jekyll/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name : Home
   link : /
 - name : Projects
-  link : /projects.html
+  link : /projects
 - name : More
-  link : /more.html
+  link : /more
 - name : News
-  link : /news.html
+  link : /news
