--- a/jekyll/_data/programming-skills.yml
+++ b/jekyll/_data/programming-skills.yml
@@ -6,6 +6,14 @@
   percentage : 80
   color : success
 
+- name : Java
+  percentage : 60
+  color : 
+
+- name : C++
+  percentage : 60
+  color : 
+
 - name : C
   percentage : 50
   color : 
