--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ domain: manuelaayo.github.io
 
 url: https://manuelaayo.github.io
 
-baseurl: /manuelaayo.github.io/
+baseurl: /manuelaayo.github.io
 
 # collections
 collections:
