--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+domain: manuelaayo.github.io
+url : https://manuelaayo.github.io
 title : Manuela AYO
 baseurl : ""
 repository : Manuela-AYO/manuelaayo.github.io
